--- a/src/components/NewModule/Form1/Form1.css
+++ b/src/components/NewModule/Form1/Form1.css
@@ -33,7 +33,6 @@
     padding-left: 10px;
     height: 8px;
     width: 180px;
-    border: 1p;
     justify-content: space-between;
     display: flex;
     flex-direction: row;
@@ -51,9 +50,9 @@
 }
 .Form1Body p{
     margin-top: 0;
-    font-size: 11px;
-    margin-top: 8px;
-    margin-bottom: 11px;
+    font-size: 0.6em;
+    margin-top: 1%;
+    margin-bottom: 2%;
     margin-left: 10px;
     color:rgb(167, 170, 171);
     padding-left: 10px;
@@ -65,69 +64,70 @@
    flex-flow: row;
    border-radius: 5px;
    border: 1px solid #b0b0b0;
-   margin-bottom: 25px;
+   margin-bottom: 1.5%;
    margin-left: 30px;
    margin-right: 20px;
    padding-left: 2px;
 }
 .Form1Field span{
-    flex:1;
+    margin-left: 2px;
     display: flex;
     flex-flow: row;
-    height: 100%;
     align-items: center;
     justify-content: flex-end;
-    font-size: 20px;
+    font-size: 1em;
     color:rgb(167, 170, 171);
 }
 .Form1Field input{
     flex:15;
-    padding:10px;
-    outline: none;
+    padding-left:1%;
+    padding-right:1%;
     border: none;
+    outline: none;
     background-color:rgb(247, 255, 249,0.3) ;
     color: rgb(20, 20, 20);
-    font-size: 14px;
+    font-size: 0.9em;
 }
 .Form1Field input::placeholder{
     color:rgb(167, 170, 171) ;
-    font-size: 14px;
+    font-size: 0.9em;
 }
 .Form2Field{
     flex:2;
     display: flex;
     flex-flow: row;
     border: 1px solid #b0b0b0;
-    margin-bottom: 20px;
+    margin-bottom: 2%;
     margin-left: 30px;
     margin-right: 20px;
     border-radius: 5px ;
     padding-left: 2px;
  }
  .Form2Field span{
-    flex:1;
     display: flex;
     flex-flow: row;
-    height: 100%;
     align-items: flex-start;
     justify-content: flex-end;
-    font-size: 20px;
-    padding-top: 10px;
+    font-size: 1em;
+    padding-left: 0.1%;
+    padding-top:1.3%;
     color:rgb(167, 170, 171);
 }
 .Form2Field textarea{
     flex:15;
-    padding:10px;
+    padding-left: 1%;
+    padding-right: 1%;
+    padding-top:1.75%;
     outline: none;
     border: none;
     background-color:rgb(247, 255, 249,0.3) ;
     color: rgb(20, 20, 20);
-    font-size: 14px;
+    font-size: 0.9em;
     font-family: Arial;
 }
 .Form2Field textarea::placeholder{
     color:rgb(167, 170, 171) ;
-    font-size: 14px;
+    font-size: 0.9em;
     padding-top: 0;
     font-family: Arial;
 }
@@ -138,7 +138,7 @@
      border-bottom-left-radius: 25px;
      background-color:rgb(0, 132, 255);
      color:white;
-     outline: none;
-     cursor: pointer;
+
+     
      border: 1px solid rgb(0, 132, 255);
  }
