--- a/src/components/NewModule/Form1/Form1.css
+++ b/src/components/NewModule/Form1/Form1.css
@@ -87,11 +87,25 @@
     font-family: Arial;
 }
 
- .Form1Body button{
-     flex:1;
-     padding: 0;
-     border-bottom-left-radius: 25px;
-     background-color:rgb(0, 132, 255);
-     color:white;
-     border: 1px solid rgb(0, 132, 255);
- }
+.Form1Body button{
+    flex:1;
+    padding: 0;
+    border-bottom-left-radius: 25px;
+    border-bottom-right-radius: 25px;
+    background-color:rgb(0, 132, 255);
+    color:white;
+    border: 1px solid rgb(0, 132, 255);
+    cursor: pointer;
+}
+.Form1Continue:disabled,
+.Form1Continue[disabled]{
+    background-color:rgba(0, 132, 255,0.7);
+    border: 1px solid rgba(0, 132, 255,0.7);
+    color: rgba(255,255,255,0.7);
+    cursor: not-allowed;
+}
+@media(min-width: 530px){
+    .Form1Continue{
+        border-bottom-right-radius: 0;
+    }
+}
