--- a/src/components/Navigation/Header/DropDown/DropDown.css
+++ b/src/components/Navigation/Header/DropDown/DropDown.css
@@ -6,14 +6,19 @@
     left:0;
     top:3rem;
     z-index: 200;
+    padding: 0;
+    margin: 0;
     background-color: rgb(20, 20, 20);
-    padding: 32px 16px;
     box-sizing:border-box ;
-    transition: transform 0.3s ease-out ;
-
+    transition: transform 0.3s ease-out ;   
 }
+
+
 .Open{
     transform: translateX(0);
+    padding: 0;
+    margin: 0;
+  
 }
 .Close {
     transform:translateX(-100%) ;
