--- a/src/components/Navigation/Header/NavigationItems/NavigationItems.css
+++ b/src/components/Navigation/Header/NavigationItems/NavigationItems.css
@@ -1,9 +1,20 @@
 .NavigationItems{
     display: flex;
+    flex-flow: column;
+    justify-content: flex-start;
+    height: 30%;
+    align-items: flex-start;
+    width:  100%;
+    padding: 0;
+    margin: 0;
+}
+@media(min-width:520px){
+	.NavigationItems{
     flex:1;
     flex-flow: row;
     justify-content: flex-end;
     align-items: center;
     height: 100%;
     list-style-type: none;
+}
 }
