--- a/src/components/NewModule/Form2/Form2.css
+++ b/src/components/NewModule/Form2/Form2.css
@@ -2,6 +2,7 @@
     flex:11;
     display: flex;
     flex-direction: column;
+    border-bottom-left-radius: 25px;
 }
 .Form2Body p{
     margin-top: 0;
@@ -18,7 +19,7 @@
     display: flex;
     flex-flow: column;
     padding-bottom: 6.5%;
-    padding-left: 20px;
+    padding-left: 30px;
     overflow-y: auto;
 }
 .ItemsContainer a{
@@ -35,7 +36,7 @@
 }
 .ItemsContainer span{
  padding-left: 2px;
- font-size: 1.5em;
+ font-size: 0.9em;
  color: rgb(184, 184, 184);
 }
 .itemLabel{
@@ -45,11 +46,21 @@
 .SubmitButton{
     flex:1;
     border-bottom-left-radius: 25px;
-    border-bottom-left-radius: 25px;
+    border-bottom-right-radius: 25px;
     color:white;
     background-color: rgb(75, 250, 162);
     margin:0;
     outline: none;
     border: 1px solid  rgb(75, 250, 162);
-
+}
+.SubmitButton[disabled],.SubmitButton:disabled{
+    background-color:rgba(0, 132, 255,0.7);
+    border: 1px solid rgba(0, 132, 255,0.7);
+    color: rgba(255,255,255,0.7);
+    cursor: not-allowed;
+}
+@media(min-width: 530px){
+    .SubmitButton{
+        border-bottom-right-radius: 0;
+    }
 }
