--- a/src/components/MyModules/MyModules.css
+++ b/src/components/MyModules/MyModules.css
@@ -1,10 +1,12 @@
 .MyModulesContainer{
+
 	flex:1;
 	display: flex;
 	flex-flow: column;
 }
 .MyModules{
 	flex:1;
+	overflow-y: auto;
 	display: flex;
 	flex-flow: row;
 	justify-content: space-around;
