--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,22 @@
-body {
-  
+body{
   height: 100vh;
   width: 100%;
+  display: flex;
+  flex-flow: column;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow-y: hidden;
+
+}
+#root{
+  flex:1;
+  display: flex;
+  flex-flow: column;
+  overflow-y: hidden;
 }
 
 code {
