--- a/src/index.css
+++ b/src/index.css
@@ -2,23 +2,15 @@ body {
   height: 100vh;
   width: 100%;
   margin: 0;
-  display: flex;
-  flex-flow: column;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-
 }
 #root{
   height: 100%;
-  position: fixed;
-  overflow-y: auto;
-  display: flex;
-  flex-flow: column;
-
-
+  width: 100%;
 }
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
