--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,8 @@ body {
 #root{
   height: 100%;
   width: 100%;
+  display: flex;
+  flex-flow: column;
 }
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
