--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@ body {
   width: 100%;
   display: flex;
   flex-flow: column;
+  overflow-y: auto;
 }
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
