--- a/src/components/MyModules/MyModules.css
+++ b/src/components/MyModules/MyModules.css
@@ -2,9 +2,11 @@
 	flex:1;
 	display: flex;
 	flex-flow: column;
+
 }
 .MyModules{
-	flex:1;
+	flex:9;
+	overflow-y: auto;
 	display: flex;
 	flex-flow: row;
 	justify-content: space-around;
