--- a/src/components/MyModules/MyModules.css
+++ b/src/components/MyModules/MyModules.css
@@ -1,8 +1,9 @@
 .MyModulesContainer{
-	flex:1;
+	position: fixed;
+	height: 100%;
+	overflow-y: auto;
 	display: flex;
 	flex-flow: column;
-
 }
 .MyModules{
 	flex:1;
