--- a/src/containers/App.css
+++ b/src/containers/App.css
@@ -1,9 +1,9 @@
 .App{
-flex:1;
+height: 100%;
+overflow-y: auto;
 margin:0;
 padding: 0;
 display: flex;
 flex-flow: column;
-overflow-y: auto;
 }
 
