--- a/src/index.css
+++ b/src/index.css
@@ -7,13 +7,9 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow-y: auto;
 }
-#root{
-  height: 100%;
-  width: 100%;
-  display: flex;
-  flex-flow: column;
-}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
