--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,8 @@
+html{
+  height: 100%;
+}
 body {
-  height: 100vh;
+  height: 100%;
   width: 100%;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -9,7 +12,13 @@ body {
   -moz-osx-font-smoothing: grayscale;
   overflow-y: auto;
 }
+#root{
+  height: 100%;
+  display: flex;
+  flex-flow: column;
+ 
 
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
