--- a/src/components/MyModules/MyModules.css
+++ b/src/components/MyModules/MyModules.css
@@ -1,7 +1,8 @@
 .MyModulesContainer{
-	flex:1;
+	min-height: 100%;
 	display: flex;
 	flex-flow: column;
+	overflow-y: auto;
 }
 .MyModules{
 	flex:1;
