--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 html{
   height: 100%;
+
 }
 body {
   height: 100%;
@@ -10,6 +11,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow-y: scroll;
 
 }
 #root{
