--- a/src/components/MyModules/MyModules.css
+++ b/src/components/MyModules/MyModules.css
@@ -2,7 +2,13 @@
 	flex:1;
 	display: flex;
 	flex-flow: column;
+	overflow-y: scroll;
 
+}
+@media(min-width:530px){
+	.MyModulesContainer{
+		overflow-y: hidden;
+	}
 }
 .MyModules{
 	flex:1;
