'notification-header-ui'

--- a/src/components/Notifications/Notifications.css
+++ b/src/components/Notifications/Notifications.css
@@ -1,3 +1,9 @@
 .Notifications{
 	flex:1;
+	background-color: rgb(224, 224, 224);
+	display: flex;
+	flex-flow: column;
+}
+.NotificationsBody{
+	flex:9;
 }
