--- a/src/components/MyModuleDetails/MyModuleDetails.css
+++ b/src/components/MyModuleDetails/MyModuleDetails.css
@@ -2,9 +2,9 @@
 	flex:1;
 	display: flex;
 	flex-flow: row;
+	overflow-y: auto;
 }
 .MyModuleInfos{
-	flex:1;
 	background-color: rgb(59, 137, 255);
 	display: flex;
 	flex-flow: column;
@@ -27,12 +27,7 @@
 	font-size: 2em;
 	
 }
-@media(max-width: 820px){
-	.MyModuleInfosHeader h3{
-	
-	font-size: 1.2em;	
-}
-}
+
 .MyModuleInfosBody{
 	flex:3;
 	overflow-y: auto;
@@ -60,4 +55,10 @@
 }
 .MyModuleStats{
 	flex:3;
+}
+@media(min-width: 520px){
+	.MyModuleInfos{
+	flex:1;
+	}
+
 }
