--- a/src/components/MyModuleDetails/MyModuleDetails.css
+++ b/src/components/MyModuleDetails/MyModuleDetails.css
@@ -1,64 +1,38 @@
 .MyModuleDetails{
 	flex:1;
 	display: flex;
-	flex-flow: row;
+	flex-flow: column;
 	overflow-y: auto;
-}
-.MyModuleInfos{
-	background-color: rgb(59, 137, 255);
-	display: flex;
-	flex-flow: column;
-}
-.MyModuleInfosHeader{
-	flex:1;
-	display: flex;
-	flex-flow: column;
-	justify-content: center;
-	align-items: center;
-}
-.MyModuleInfosHeader img{
-	height: 50%;
-	width: 50%;
-	margin-bottom: 2%;
-}
-.MyModuleInfosHeader h3{
-	color: white;
-	margin: 0;
-	font-size: 2em;
-	
-}
-
-.MyModuleInfosBody{
-	flex:3;
-	overflow-y: auto;
-	display: flex;
-	flex-flow: column;
-	padding: 5%;
-}
-
-.ModuleInfosIcons{
-	font-size: 1.2em;
-
-	color: rgb(20,20,20);
-	font-weight: bold;
-}
-
-.MyModuleInfosBody  h3{
-	font-weight: normal;
-	background-color:rgba(20,20,20,0.3);
-	border-radius: 5px;
-	padding: 10px;
-	color:white;
-	margin:0;
-	margin-bottom: 3%;
-
 }
 .MyModuleStats{
 	flex:3;
+	display: flex;
+	flex-flow: column;
+}
+.deleteButtonContainer{
+		display: flex;
+		flex-flow: row;
+		justify-content: flex-start;
+		padding: 0.5%;
+}
+.deleteButtonContainer button{
+	background-color: rgb(255, 33, 37);
+	color:white;
+	border: 1px solid rgb(255, 33, 37);
+	outline: none;
+	height: 3rem;
+	width: 3rem;
+	font-size: 2em;
+	display: flex;
+	flex-flow: row;
+	justify-content: center;
+	align-items: center;
+	cursor: pointer;
+	border-radius: 50%;
 }
 @media(min-width: 520px){
-	.MyModuleInfos{
-	flex:1;
+	.MyModuleDetails{
+		flex-flow: row;
+		overflow-y: none;
 	}
-
 }
