--- a/src/components/MyModuleDetails/MyModuleDetails.css
+++ b/src/components/MyModuleDetails/MyModuleDetails.css
@@ -2,10 +2,9 @@
 	flex:1;
 	display: flex;
 	flex-flow: column;
-	overflow-y: scroll;
+	overflow-y: auto;
 }
 .MyModuleStats{
-	flex:3;
 	display: flex;
 	flex-flow: column;
 }
@@ -35,4 +34,7 @@
 		flex-flow: row;
 		overflow-y: none;
 	}
+	.MyModuleStats{
+	flex:3;
+}
 }
