--- a/src/components/MyModuleDetails/ModuleInfos/ModuleInfos.css
+++ b/src/components/MyModuleDetails/ModuleInfos/ModuleInfos.css
@@ -2,7 +2,7 @@
 	background-color: rgb(59, 137, 255);
 	display: flex;
 	flex-flow: column;
-	height: 100%;
+
 }
 .ModuleInfosHeader{
 	flex:1;
@@ -24,7 +24,6 @@
 }
 .ModuleInfosBody{
 	flex:3;
-	overflow-y: auto;
 	display: flex;
 	flex-flow: column;
 	padding: 5%;
@@ -46,5 +45,8 @@
 @media(min-width: 520px){
 	.ModuleInfos{
 	flex:1;
+	}
+	.ModuleInfosBody{
+		overflow-y: auto;
 	}
 }
