--- a/src/components/MyModuleDetails/ModuleMonitor/ModuleMonitor.css
+++ b/src/components/MyModuleDetails/ModuleMonitor/ModuleMonitor.css
@@ -1,13 +1,13 @@
 .MyModuleMonitor{
-	flex:1;
 	display: flex;
 	flex-flow: column;
 	align-items: center;
 	padding: 1%;
-	
+	overflow-y: visible;
 }
 @media(min-width: 520px){
 	.MyModuleMonitor{
+		flex: 1;
 		overflow-y: auto;
 		flex-flow: row;
 		flex-wrap: wrap;
