--- a/src/components/MyModuleDetails/ModuleInfos/ModuleInfos.css
+++ b/src/components/MyModuleDetails/ModuleInfos/ModuleInfos.css
@@ -2,7 +2,7 @@
 	background-color: rgb(59, 137, 255);
 	display: flex;
 	flex-flow: column;
-	overflow-y: visible;
+
 }
 .ModuleInfosHeader{
 	flex:1;
@@ -24,14 +24,10 @@
 }
 .ModuleInfosBody{
 	flex:3;
-	overflow-y: auto;
 	display: flex;
 	flex-flow: column;
 	padding: 5%;
 }
-
-
-
 .ModuleInfosBody  h3{
 	font-weight: normal;
 	background-color:rgba(20,20,20,0.3);
@@ -40,5 +36,14 @@
 	color:white;
 	margin:0;
 	margin-bottom: 3%;
+
+}
+@media(min-width: 520px){
+	.ModuleInfos{
+		flex:1;
+	}
+	.ModuleInfosBody{
+		overflow-y: auto;
+	}
 
 }
