--- a/src/components/MyModuleDetails/ModuleMonitor/ActivityDurationMonitor/ActivityDurationMonitor.css
+++ b/src/components/MyModuleDetails/ModuleMonitor/ActivityDurationMonitor/ActivityDurationMonitor.css
@@ -4,9 +4,8 @@
 	margin-bottom: 2%;
 	border-radius: 5px;
 	padding: 1%;
-	
 	align-items: center;
-	background-color: rgb(59, 137, 255);	
+	background-color: rgb(53,123,229);
 }
 .ActivityDurationMonitor div{
 	height: 100%;
