--- a/src/components/MyModuleDetails/ModuleMonitor/TemperatureMonitor/TemperatureMonitor.css
+++ b/src/components/MyModuleDetails/ModuleMonitor/TemperatureMonitor/TemperatureMonitor.css
@@ -6,7 +6,7 @@
 	padding: 1%;
 	
 	align-items: center;
-	background-color: rgb(59, 137, 255);	
+	background-color: rgb(53,123,229);	
 }
 .TemperatureMonitor div{
 	height: 100%;
