--- a/src/components/MyModules/MyModule/MyModule.css
+++ b/src/components/MyModules/MyModule/MyModule.css
@@ -9,7 +9,7 @@
 	background-image: url("https://cdn.droggol.com/web/image/535/web.svg");
 	background-size: cover;
 	background-position: center;
-	background-color: rgba(20, 20, 20,0.9);
+	background-color: rgba(53,123,229);
 	cursor: pointer;
 }
 .MyModule:hover{
