--- a/src/components/MyModuleDetails/ModuleMonitor/DataMonitor/DataMonitor.css
+++ b/src/components/MyModuleDetails/ModuleMonitor/DataMonitor/DataMonitor.css
@@ -6,7 +6,7 @@
 	padding: 1%;
 	
 	align-items: center;
-	background-color: rgb(59, 137, 255);	
+	background-color: rgb(53,123,229);	
 }
 .DataMonitor div{
 	height: 100%;
