--- a/src/components/MyModules/MyModule/MyModule.css
+++ b/src/components/MyModules/MyModule/MyModule.css
@@ -2,6 +2,7 @@
 	height:20rem;
 	width: 20rem;
 	margin-bottom: 1%;
+	text-decoration:none;
 	display: flex;
 	flex-flow: column;
 	border-radius: 5px;
