--- a/src/components/Notifications/NotificationItem/NotificationItem.css
+++ b/src/components/Notifications/NotificationItem/NotificationItem.css
@@ -8,6 +8,7 @@
 	box-shadow: 5px 5px 5px 1px rgb(184, 184, 184);
 	border-radius: 5px;
 	cursor: pointer;
+	text-decoration: none;
 }
 
 .NotificationItemImage {
