--- a/src/components/NewModule/Form1/Form1.css
+++ b/src/components/NewModule/Form1/Form1.css
@@ -89,11 +89,12 @@
 
 .Form1Body button{
     flex:1;
-    padding: 0;
+    margin: 0;
     border-bottom-left-radius: 25px;
     border-bottom-right-radius: 25px;
     background-color:rgb(0, 132, 255);
     color:white;
+    outline: none;
     border: 1px solid rgb(0, 132, 255);
     cursor: pointer;
 }
