--- a/src/components/NewModule/NewModule.css
+++ b/src/components/NewModule/NewModule.css
@@ -1,25 +1,19 @@
 .NewModuleContainer{
-    width: 100%;
+    flex: 1;
     background-color: rgba(53,123,229);
-    height: 100%;
     box-sizing: border-box;
     overflow-y: auto;
     padding: 5%;
 }
 .NewModule{
-
-        position: relative;
         display: flex;
         flex-flow:column;
         background-color: rgb(247, 255, 249);
-
         min-height: 90%;
         width: 90%;
         padding-top: 16px;
         border-radius: 25px;
         margin: 0 auto;
-       
-
 }
     .ModuleHeader{
         padding-left:20px;
