'add-error-message'

--- a/src/components/MyModules/PaginationItems/PaginationItems.css
+++ b/src/components/MyModules/PaginationItems/PaginationItems.css
@@ -1,6 +1,7 @@
 .PaginationItems{
 	display: flex;
 	flex-flow: row;
+	flex-wrap: wrap;
 	align-items: center;
 	justify-content: center;
 	padding: 1% 10%;
