--- a/src/components/Notifications/NotificationsBody/NotificationsBody.css
+++ b/src/components/Notifications/NotificationsBody/NotificationsBody.css
@@ -5,7 +5,7 @@
 	display: flex;
 	flex-flow: row;
 	justify-content: space-around;
-	align-items: flex-start;
+	align-items: center;
 	flex-wrap: wrap;
 	
 }
