--- a/src/components/ui/LoadSprint2/LoadSprint2.css
+++ b/src/components/ui/LoadSprint2/LoadSprint2.css
@@ -6,7 +6,7 @@
 }
 
 .cube1, .cube2 {
-  background-color: #333;
+  background-color: rgb(53,123,229);
   width: 15px;
   height: 15px;
   position: absolute;
