--- a/src/components/ui/LoadingSprint/LoadingSprint.css
+++ b/src/components/ui/LoadingSprint/LoadingSprint.css
@@ -7,7 +7,7 @@
 .sk-cube-grid .sk-cube {
   width: 33%;
   height: 33%;
-  background-color: rgba(53,123,229);
+  background-color: rgb(53,123,229);
   float: left;
   -webkit-animation: sk-cubeGridScaleDelay 1.3s infinite ease-in-out;
           animation: sk-cubeGridScaleDelay 1.3s infinite ease-in-out; 
